--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
                             </div>
                             <div id="NewGamePullDowns">
                                 <!--Genre and Decade pull downs-->
-                                <select id="GenrePulldown" class="ModalData">
+                                <select id="GenrePulldown" class="ModalData jc-select">
                                     <option>Rock</option>
                                 </select>
-                                <select id="DecadePulldown" class="ModalData">
+                                <select id="DecadePulldown" class="ModalData jc-select">
                                     <option>1990</option>
                                     <option>1970</option>
                                     <option>1960</option>
@@ -251,7 +251,7 @@
                                 Make a Guess
                             </div>
                             <div id="GuessInputContainer" class="ModalData">
-                                <Input id="GuessInput">
+                                <Input id="GuessInput" class="jc-input">
                             </div>
                             <div id="GuessButtons">
                                 <div 
